# investment-research

./: .gitignore  Project_structure.txt  README.md  TODOS.md  gics_structure.csv  heatmap_cell_source.txt  pyproject.toml
Notebooks/: README.md
Notebooks/Asset/: Asset Study - Portfolio.ipynb  (+7 more)
Quantapp/: #Project Structure  README.md  __init__.py  secrets.py
apps/: README.md
dashboards/: __init__.py
old projects/: Analysis_Bottom_Up.ipynb  Analysis_Market.ipynb  Analysis_Portfolio.ipynb  Analysis_Portfolio_V1.ipynb  Asset study (Backtesting).ipynb  Asset study (Forecasting).ipynb  Asset study (technicals)_V1 .ipynb  Asset study - Model.ipynb  Asset study - Options.ipynb  Asset study - Pairs.ipynb  Asset study - Single asset .ipynb  Asset study - Strategy.ipynb  Asset study - analysis v1 .ipynb  Credit Analysis.ipynb  Forecasting.ipynb  Global economic analysis.ipynb  Macroeconomic Analysis.ipynb  Market Study - Broad market.ipynb  Market Study - Commodities - Energy .ipynb  Market Study - Fundamentals - Equities.ipynb  Market Study - Fundamentals - Sector & Industry.ipynb  Market Study - Sector & Industry.ipynb  Portfolio Analysis - Broad.ipynb  Portfolio.py
scripts/: README.md  clear_notebooks.sh
thinkorswim scripts/: README.md  var_cvar_95_v11_mobile_mobius_style.thinkscript  var_cvar_95_v11_mobile_mobius_style_v2.thinkscript  var_cvar_95_v12_mobile_intraday_history.thinkscript  var_cvar_95_v13_mobile_intraday_history_clouds.thinkscript  var_cvar_95_v14_mobile_ny_session.thinkscript  var_cvar_95_v15_mobile_intraday_history_empirical.thinkscript
(+199 files in other folders)
